Add controller for MongodbRole (#8)
- Add controller for mongodbRole
- Add test
