# apis/authorization/v1alpha1/types.go
@@ -15,6 +15,10 @@ const (
 	ResourceMysqlRole     = "mysqlrole"
 	ResourceMysqlRoles    = "mysqlroles"
 
+	ResourceKindMongodbRole = "MongodbRole"
+	ResourceMongodbRole     = "mongodbrole"
+	ResourceMongodbRoles    = "mongodbroles"
+
 	ResourceKindPostgresRoleBinding = "PostgresRoleBinding"
 	ResourcePostgresRoleBinding     = "postgresrolebinding"
 	ResourcePostgresRoleBindings    = "postgresrolebindings"
@@ -38,8 +42,8 @@ type PostgresRole struct {
 
 // PostgresRoleSpec contains connection information, postgres role info etc
 type PostgresRoleSpec struct {
-	Provider *ProviderSpec `json:"provider"`
-	Database *DatabaseSpec `json:"database,omitempty"`
+	Provider *ProviderSpec              `json:"provider"`
+	Database *DatabaseConfigForPostgres `json:"database,omitempty"`
 
 	// links:
 	// 	- https://www.vaultproject.io/api/secret/databases/index.html
@@ -144,11 +148,10 @@ type VaultSpec struct {
 	ClientTLSSecret string `json:"clientTLSSecret,omitempty"`
 }
 
-// vault doc:
-// 	- https://www.vaultproject.io/api/secret/databases/postgresql.html
-// 	- https://www.vaultproject.io/api/secret/databases/index.html
-// DatabaseSpec contains connection url, connection settings, credential information
-type DatabaseSpec struct {
+// https://www.vaultproject.io/api/secret/databases/index.html
+// https://www.vaultproject.io/api/secret/databases/postgresql.html#configure-connection
+// DatabaseConfigForPostgres contains database connection config
+type DatabaseConfigForPostgres struct {
 	// Specifies the name for this database connection
 	Name string `json:"name"`
 
@@ -282,8 +285,8 @@ type MysqlRole struct {
 
 // MysqlRoleSpec contains connection information, mysql role info etc
 type MysqlRoleSpec struct {
-	Provider *ProviderSpec `json:"provider"`
-	Database *DatabaseSpec `json:"database,omitempty"`
+	Provider *ProviderSpec           `json:"provider"`
+	Database *DatabaseConfigForMysql `json:"database,omitempty"`
 
 	// links:
 	// 	- https://www.vaultproject.io/api/secret/databases/index.html
@@ -309,6 +312,48 @@ type MysqlRoleSpec struct {
 	// https://www.vaultproject.io/api/secret/databases/mysql-maria.html#revocation_statements
 	// Specifies the database statements to be executed to revoke a user.
 	RevocationStatements []string `json:"revocationStatements,omitempty"`
+}
+
+// https://www.vaultproject.io/api/secret/databases/index.html
+// https://www.vaultproject.io/api/secret/databases/mysql-maria.html#configure-connection
+// DatabaseConfigForMysql contains database connection config
+type DatabaseConfigForMysql struct {
+	// Specifies the name for this database connection
+	Name string `json:"name"`
+
+	// Specifies the name of the plugin to use for this connection.
+	// Default plugin:
+	//	- for postgres: postgresql-database-plugin
+	//  - for mysql: mysql-database-plugin
+	PluginName string `json:"pluginName,omitempty"`
+
+	// Specifies the PostgreSQL DSN. This field can be templated and supports
+	// passing the username and password parameters in the following format {{field_name}}.
+	// A templated connection URL is required when using root credential rotation.
+	// e.g. postgresql://{{username}}:{{password}}@localhost:5432/postgres?sslmode=disable
+	ConnectionUrl string `json:"connectionUrl"`
+
+	// Name of secret containing the username and password
+	// secret data:
+	//	- username: <value>
+	//	- password: <value>
+	CredentialSecret string `json:"credentialSecret"`
+
+	// List of the roles allowed to use this connection.
+	// Defaults to empty (no roles), if contains a "*" any role can use this connection.
+	AllowedRoles string `json:"allowedRoles,omitempty"`
+
+	// Specifies the maximum number of open connections to the database.
+	MaxOpenConnections int `json:"maxOpenConnections,omitempty"`
+
+	// Specifies the maximum number of idle connections to the database.
+	// A zero uses the value of max_open_connections and a negative value disables idle connections.
+	// If larger than max_open_connections it will be reduced to be equal.
+	MaxIdleConnections int `json:"maxIdleConnections,omitempty"`
+
+	// Specifies the maximum amount of time a connection may be reused.
+	// If <= 0s connections are reused forever.
+	MaxConnectionLifetime string `json:"maxConnectionLifetime,omitempty"`
 }
 
 // +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
@@ -410,4 +455,119 @@ type MysqlRoleBindingList struct {
 
 	// Items is a list of PostgresRoleBinding objects
 	Items []PostgresRoleBinding `json:"items,omitempty"`
+}
+
+// +genclient
+// +k8s:openapi-gen=true
+// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
+
+// MongodbRole
+type MongodbRole struct {
+	metav1.TypeMeta   `json:",inline,omitempty"`
+	metav1.ObjectMeta `json:"metadata,omitempty"`
+	Spec              MongodbRoleSpec   `json:"spec,omitempty"`
+	Status            MongodbRoleStatus `json:"status,omitempty"`
+}
+
+// MongodbRoleSpec contains connection information, Mongodb role info etc
+type MongodbRoleSpec struct {
+	Provider *ProviderSpec             `json:"provider"`
+	Database *DatabaseConfigForMongodb `json:"database,omitempty"`
+
+	// links:
+	// 	- https://www.vaultproject.io/api/secret/databases/index.html
+	//	- https://www.vaultproject.io/api/secret/databases/mongodb.html
+
+	// The name of the database connection to use for this role.
+	DBName string `json:"dbName"`
+
+	// Specifies the TTL for the leases associated with this role.
+	// Accepts time suffixed strings ("1h") or an integer number of seconds.
+	// Defaults to system/engine default TTL time
+	DefaultTTL string `json:"defaultTTL,omitempty"`
+
+	// Specifies the maximum TTL for the leases associated with this role.
+	// Accepts time suffixed strings ("1h") or an integer number of seconds.
+	// Defaults to system/engine default TTL time.
+	MaxTTL string `json:"maxTTL,omitempty"`
+
+	// https://www.vaultproject.io/api/secret/databases/Mongodb-maria.html#creation_statements
+	// Specifies the database statements executed to create and configure a user.
+	CreationStatements []string `json:"creationStatements"`
+
+	// https://www.vaultproject.io/api/secret/databases/Mongodb-maria.html#revocation_statements
+	// Specifies the database statements to be executed to revoke a user.
+	RevocationStatements []string `json:"revocationStatements,omitempty"`
+}
+
+// https://www.vaultproject.io/api/secret/databases/index.html
+// https://www.vaultproject.io/api/secret/databases/mongodb.html#configure-connection
+// DatabaseConfigForMongodb contains database connection config
+type DatabaseConfigForMongodb struct {
+	// Specifies the name for this database connection
+	Name string `json:"name"`
+
+	// Specifies the name of the plugin to use for this connection.
+	// Default plugin:
+	//	- for postgres: postgresql-database-plugin
+	//  - for mysql: mysql-database-plugin
+	PluginName string `json:"pluginName,omitempty"`
+
+	// Specifies the PostgreSQL DSN. This field can be templated and supports
+	// passing the username and password parameters in the following format {{field_name}}.
+	// A templated connection URL is required when using root credential rotation.
+	// e.g. postgresql://{{username}}:{{password}}@localhost:5432/postgres?sslmode=disable
+	ConnectionUrl string `json:"connectionUrl"`
+
+	// Name of secret containing the username and password
+	// secret data:
+	//	- username: <value>
+	//	- password: <value>
+	CredentialSecret string `json:"credentialSecret"`
+
+	// List of the roles allowed to use this connection.
+	// Defaults to empty (no roles), if contains a "*" any role can use this connection.
+	AllowedRoles string `json:"allowedRoles,omitempty"`
+
+	// Specifies the MongoDB write concern. This is set for the entirety
+	// of the session, maintained for the lifecycle of the plugin process.
+	WriteConcern string `json:"writeConcern,omitempty"`
+}
+
+// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
+
+type MongodbRoleList struct {
+	metav1.TypeMeta `json:",inline"`
+	metav1.ListMeta `json:"metadata,omitempty"`
+
+	// Items is a list of MongodbRole objects
+	Items []MongodbRole `json:"items,omitempty"`
+}
+
+type MongodbRolePhase string
+
+type MongodbRoleStatus struct {
+	Phase MongodbRolePhase `json:"phase,omitempty"`
+
+	// observedGeneration is the most recent generation observed for this MongodbRole. It corresponds to the
+	// MongodbRole's generation, which is updated on mutation by the API Server.
+	ObservedGeneration int64 `json:"observedGeneration,omitempty"`
+
+	// Represents the latest available observations of a MongodbRole current state.
+	Conditions []MongodbRoleCondition `json:"conditions,omitempty"`
+}
+
+// MongodbRoleCondition describes the state of a MongodbRole at a certain point.
+type MongodbRoleCondition struct {
+	// Type of MongodbRole condition.
+	Type string `json:"type,omitempty"`
+
+	// Status of the condition, one of True, False, Unknown.
+	Status v1.ConditionStatus `json:"status,omitempty"`
+
+	// The reason for the condition's.
+	Reason string `json:"reason,omitempty"`
+
+	// A human readable message indicating details about the transition.
+	Message string `json:"message,omitempty"`
 }
